tests/integration/errors/test_constrained_generic_missing_method.sn
# Error test: type parameter constraint violation — struct missing required method

interface Comparable =>
    fn compare(other: Self): int

struct SortedList<T: Comparable> =>
    items: T[]

struct Point =>
    x: int
    y: int

fn main(): int =>
    var sl: SortedList<Point> = SortedList<Point> { items: {} }
    return 0
